# OpenGL_examples

./: README.md  meson.build  shader.cpp  shader.h
lib/: glfw3.lib
src/: example1.cpp  example2.cpp  example3.cpp  meson.build  shader.cpp  shader.h  texture.cpp  texture.h
src/ex2/: example2.cpp
src/ex3/: example3.cpp
src/ex4/: example4.cpp
src/ex5/: example5.cpp
